ansible/roles/1.agent/4.k8s/files/cadvisor.yml
apiVersion: v1
kind: Pod
metadata:
  name: cadvisor
  labels:
    app: cadvisor
spec:
  containers:
  - name: cadvisor
    image: gcr.io/cadvisor/cadvisor:latest
    ports:
    - containerPort: 8080
      name: http-metrics
  nodeSelector:
    kubernetes.io/os: linux
