ansible/roles/1.agent/4.k8s/files/blackbox-exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
        prometheus.io/scrape: "true"
        prometheus.io/port: "9115"
    spec:
      containers:
      - name: blackbox-exporter
        image: prom/blackbox-exporter:latest
        ports:
        - containerPort: 9115
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: blackbox-config
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-service
  labels:
    app: blackbox-exporter
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9115"
spec:
  type: NodePort
  selector:
    app: blackbox-exporter
  ports:
  - port: 9115
    targetPort: 9115
    nodePort: 30082
