ansible/roles/1.agent/4.k8s/files/node-exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-exporter
  labels:
    app: node-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
      - name: node-exporter
        image: prom/node-exporter:latest
        ports:
        - containerPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  labels:
    app: node-exporter
spec:
  ports:
    - port: 9100
      targetPort: 9100
  selector:
    app: node-exporter
