ansible/roles/1.agent/4.k8s/files/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: node-app
